# nrf70

./: Cargo.toml  gen.py  gen_wrapper.h  rust-toolchain.toml  rustfmt.toml
example/: Cargo.toml
example/.cargo/: config.toml
example/src/: lib.rs  main.rs
fw/: bindings.rs
src/: bus.rs  c_defmt.rs  fw.rs  lib.rs
